--- a/web/src/pages/styles/variables.scss
+++ b/web/src/pages/styles/variables.scss
@@ -3,3 +3,9 @@ $sider: #242A30;
 $page: #272E34;
 $nav: #743254;
 $card: #0E0F05;
+
+$primary-color: #1890ff; // Giữ lại cho các button Ant Design mặc định nếu muốn
+$text-color: #E0E0E0; // Điều chỉnh màu chữ để phù hợp với nền tối
+$light-text-color: #A0A0A0; // Màu chữ hơi mờ hơn
+$border-color: #4A4A4A; // Điều chỉnh màu border cho nền tối
+$background-color: #272E34; // Giống với $page cho background chung
